# Eigen-1

./: README.md  environment.yaml  pyproject.toml
agents/: agent.py
configs/: __init__.py  common_config.py  judge_config.yaml  prompt_config.py
configs/prompts/: Template.py  __init__.py  critic_user_rag.txt  critic_user_rag_with_suggestion.txt  quality_user_rag.txt  refine_prefix_rag.txt  refine_user_rag.txt  select_prefix_rag.txt  select_user_rag.txt  solver_prefix_rag.txt  solver_user_rag.txt
configs/templates/: r1_tool.jinja
data/: hle-bio.json  supergpqa-hard.json  trqa_lit_converted.json
functions/: eigen1_hle.py
llm_agent/: context.py  utils.py
llm_agent/tools/: tool_manager.py
mcp_sandbox/: README.md  requirements.txt  run.sh
mcp_sandbox/MCP/: build_faiss_indexes.py  deploy_server.sh  hippo_rag.py  io_manage.py  mcp_client.py  mcp_manager.py  paragraphs.json  rag_tool_emb_llm_judge.py  tool_caller.py  tool_server.py  tools.py
mcp_sandbox/MCP/faiss_unified_index/: index.pkl
mcp_sandbox/MCP/hippo_rag_output/: openie_results_ner_gpt-4o.json
mcp_sandbox/MCP/server/BASE-TOOL-Server/: base_tool_server.py
mcp_sandbox/MCP/server/BASE-TOOL-Server/paper_agent/: paper_parse.py  pdf_read.py
mcp_sandbox/MCP/server/BASE-TOOL-Server/utils/: llm_caller.py
mcp_sandbox/api_proxy/: api_server.py  models.py  tool_api.py
mcp_sandbox/api_proxy/api_utils/: fetch_web_page_api.py  pdf_read_api.py  web_search_api.py
mcp_sandbox/configs/: llm_call.json  mcp_config.json  paper_agent.json  server_list.json  web_agent.json
utils/: hle_score.py
(+3 files in other folders)
